Fixed bar charts animating and moved plot loader styled to blink-sass sass files

--- a/templates/GenespotRE/dashboard.html
+++ b/templates/GenespotRE/dashboard.html
@@ -61,10 +61,10 @@
                         <img class="img-fluid" src="{% static 'img/histogram.png' %}">
                         <p>Cubby Hole</p>
                     </li>
-                    <li class="item">
-                        <img class="img-fluid" src="{% static 'img/seqpeak.png' %}" alt="">
-                        <p>SeqPeak</p>
-                    </li>
+{#                    <li class="item">#}
+{#                        <img class="img-fluid" src="{% static 'img/seqpeak.png' %}" alt="">#}
+{#                        <p>SeqPeak</p>#}
+{#                    </li>#}
                 </div>
                 <p class="center"><a class="btn btn-link" data-target="#more-analysis" data-toggle="collapse">Show More</a></p>
             </ul>
