--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -16,7 +16,7 @@
                         <li class="navbar-item"> <a href="{% url 'landing_page' %}"><img class="navbar-brand" src="{% static 'img/isblogo.png' %}" alt="ISB Logo"/><span class="navbar-item">ISB-CGC</span></a></li>
                      {% endif %}
 
-                    <li class="navbar-link navbar-item"><a href="{% url 'about_page' %}">About</a></li>
+                    <li class="navbar-link navbar-item"><a href="{% url 'landing_page' %}">About</a></li>
                     <li class="navbar-link navbar-item"><a href="http://isb-cancer-genomics-cloud.readthedocs.org/en/latest/" target="_blank">Help</a></li>
                 </ul>
             </div>
