--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -220,7 +220,7 @@
                         </ul>
                     </li>
                     {% endif %}
-                    <li class="menu-item"><a href="{% url 'genes' %}">Manage Gene Favorite ( {{ user.genefavorite_last_view_set.all|active:'genefavorite'|length }} )</a></li>
+                    <li class="menu-item"><a href="{% url 'genes' %}">Manage Gene Favorite ( {{ user.genefavorite_set.all|active|length }} )</a></li>
                     <li class="menu-item"><a href="{% url 'gene_fav_create' %}">Create Gene Favorite(s)</a></li>
                     <li class="menu-item"><a href="{% url 'gene_select_for_new_workbook' %}">Select Genes for a New Workbook</a></li>
                 </ul>
