--- a/templates/workbooks/workbook.html
+++ b/templates/workbooks/workbook.html
@@ -265,7 +265,7 @@
                                     </select>
                                 </div>
                                 <div class="plot-container">
-                                    {% include 'workbooks/workbook_plot.html' with plot=worksheet.active_plot variables=worksheet.variables cohorts=worksheet.cohorts %}
+                                    {% include 'workbooks/workbook_plot.html' with plot=worksheet.active_plot variables=worksheet.variables cohorts=worksheet.cohorts genes=worksheet.genes %}
                                     <!-- plot needs to indicate saved plot data such as selected variables, cohorts, title, etc -->
                                     <!-- workbook_plot also needs to have reference to all worksheet cohorts, variables and genes -->
                                 </div>
@@ -277,7 +277,7 @@
                                     </select>
                                 </div>
                                 <div class="plot-container">
-                                    {% include 'workbooks/workbook_plot.html' with plot=worksheet.active_plot variables=worksheet.variables cohorts=worksheet.cohorts %}
+                                    {% include 'workbooks/workbook_plot.html' with plot=worksheet.active_plot variables=worksheet.variables cohorts=worksheet.cohorts genes=worksheet.genes %}
                                     <!-- plot needs to indicate saved plot data such as selected variables, cohorts, title, etc -->
                                     <!-- workbook_plot also needs to have reference to all worksheet cohorts, variables and genes -->
                                 </div>
