--- a/templates/GenespotRE/landing.html
+++ b/templates/GenespotRE/landing.html
@@ -38,9 +38,7 @@
 
             <div class="row">
                 <div class="col-xs-8 col-xs-offset-2 lj-title-paragraph">
-                    <p class="lj-text-center" >The ISB Cancer Genomics Cloud (ISB-CGC) is democratizing access to <a href = "http://cancergenome.nih.gov/" target = "_blank"><strong>TCGA</strong></a> data and coupling it with unprecedented computational power to allow researchers to explore and analyze this vast data-space.</p>
-                    <br>
-                    <p class="lj-text-center" >Follow us on <a href="https://twitter.com/ISB_CGC" target="_blank">Twitter</a> to find out more about our upcoming launch.</p>
+                    <p class="lj-text-center" >This site is no longer active. Please go to our live site <a href="https://isb-cgc.appspot.com">here</a> for more information and updates.</p>
                 </div>
             </div>
 
@@ -80,12 +78,6 @@
             <h2>About Us:</h2>
             <p>The Cancer Genomics Cloud is a platform that serves as a large scale repository and provides the computational infrastructure necessary to carry out cancer genomics research at unprecedented scales. </p>
             <p>Please use a Google managed email account to log into this systems.</p>
-
-
-            {% if version %}
-            <br/>
-            Last deployed to version {{ version.version }} on {{ version.date }}
-            {% endif %}
         </div>
 
         <div class="col-sm-10 col-sm-offset-1">
