--- a/templates/workbooks/workbook_plot.html
+++ b/templates/workbooks/workbook_plot.html
@@ -40,7 +40,7 @@
         </div>
 
         <!-- Settings Flyout -->
-        <div class="fly-out settings-flyout plot-config" id="plot-{{ plot.id }}-settings">
+        <div class="fly-out settings-flyout plot-config" style="overflow-y: scroll;" id="plot-{{ plot.id }}-settings">
             <div class="flyout-heading">
                 <h5>Plot Settings <a role="button" class="hide-settings-flyout pull-right" aria-label="Hide Settings Flyout"><i class="fa fa-times"></i></a></h5>
             </div>
