--- a/templates/workbooks/workbook.html
+++ b/templates/workbooks/workbook.html
@@ -325,8 +325,8 @@
 {% include "workbooks/workbook_modals.html" %}
 
 <script type="text/javascript">
-    var base_api_url            = '{{ base_api_url|safe }}';
-    var base_url                = '{{ base_url|safe }}';
+    var base_api_url            = '{{ BASE_API_URL|safe }}';
+    var base_url                = '{{ BASE_URL|safe }}';
     var display_worksheet_id    = '{{ display_worksheet.id|safe }}';
     var workbook_id             = '{{ workbook.id }}';
 </script>
