- set domain/range to return 0 for NA values - added scatterplot image for dashboard - Fixed scatterplots to use max domain/range for NA values - colour_by updates with common vars as well.

--- a/templates/GenespotRE/dashboard.html
+++ b/templates/GenespotRE/dashboard.html
@@ -37,8 +37,7 @@
                         <p>Histogram</p>
                     </li>
                     <li class="item">
-                        <!--TODO: get scatterplot chart-->
-                        <img class="img-fluid" src="{% static 'img/histogram.png' %}">
+                        <img class="img-fluid" src="{% static 'img/scatterplot.png' %}">
                         <p>Scatter Plot</p>
                     </li>
                     <li class="item">
