renamed data availability card to more accurately reflect data

--- a/templates/cohorts/new_cohort.html
+++ b/templates/cohorts/new_cohort.html
@@ -209,7 +209,7 @@
 
         <div class="parallel-sets panel panel-default">
             <div class="panel-heading">
-                <h4 class="panel-title">Data Availability</h4>
+                <h4 class="panel-title">Public Data Availability</h4>
             </div>
             <div class="panel-body">
                 <div id="multi-categorical"></div>
