Fixing #1097 isb-cgc/software-engineering-coordination

--- a/templates/GenespotRE/dashboard.html
+++ b/templates/GenespotRE/dashboard.html
@@ -18,6 +18,7 @@
 {% block content %}
 <div class="container">
 
+    {% if USER_DATA_ON %}
     <section class="panel panel-default">
         <div class="panel-heading">
             <a role="button" data-target="#analysis-body" data-toggle="collapse" aria-expanded="true" aria-controls="analysis-body">
@@ -56,15 +57,17 @@
                         <img class="img-fluid" src="{% static 'img/cubbyhole.png' %}">
                         <p>Cubby Hole</p>
                     </li>
-{#                    <li class="item">#}
-{#                        <img class="img-fluid" src="{% static 'img/seqpeak.png' %}" alt="">#}
-{#                        <p>SeqPeak</p>#}
-{#                    </li>#}
+                    <li class="item">
+                        <img class="img-fluid" src="{% static 'img/seqpeak.png' %}" alt="">
+                        <p>SeqPeak</p>
+                    </li>
                 </div>
                 <p class="center"><a class="btn btn-link" data-target="#more-analysis" data-toggle="collapse">Show More</a></p>
             </ul>
         </div>
     </section>
+    {% endif %}
+
     <section class="panel panel-default">
         <div class="panel-heading">
             <h3 class="panel-title">
