Removed workbook samples from header nav

--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -85,7 +85,7 @@
                             <button type="submit">Create a New Workbook</button>
                         </form>
                     </li>
-                    <li class="menu-item"><a href="{% url 'workbook_samples' %}">Sample Workbooks</a></li>
+{#                    <li class="menu-item"><a href="{% url 'workbook_samples' %}">Sample Workbooks</a></li>#}
                 </ul>
             </li>
             {% if USER_DATA_ON %}
