--- a/templates/GenespotRE/user_detail_saml.html
+++ b/templates/GenespotRE/user_detail_saml.html
@@ -30,8 +30,8 @@
             <p id="NIH_expiration">{{ user_details.NIH_assertion_expiration|safe }} GMT</p>
         </p>
 
-        <a href="#">How to Access Controlled-Access Data</a>
-        <a href="#">Data Use Certification Agreement</a>
+        <a href="https://github.com/isb-cgc/software-engineering-coordination/files/63234/Link.to.Data.Use.Certification.Agreement.docx">How to Access Controlled-Access Data</a>
+        <a href="https://tcga-data.nci.nih.gov/docs/TCGA_Data_Use_Certification.pdf" target="_blank">Data Use Certification Agreement</a>
     {% endif %}
     {% if membership %}
         <hr>
