Added style to error pages

--- a/templates/403.html
+++ b/templates/403.html
@@ -21,5 +21,5 @@
 {% block title %}Forbidden{% endblock %}
 
 {% block content %}
-You do not have permission to access this page.
+<h4>403: You do not have permission to access this page.</h4>
 {% endblock %}
