--- a/templates/404.html
+++ b/templates/404.html
@@ -21,5 +21,5 @@
 {% block title %}Page not found{% endblock %}
 
 {% block content %}
-The page you requested could not be found.
+<h4>404: The page you requested could not be found.</h4>
 {% endblock %}
