--- a/templates/500.html
+++ b/templates/500.html
@@ -21,5 +21,5 @@
 {% block title %}Server error{% endblock %}
 
 {% block content %}
-There was an error while handling your request.
+<h4>500: There was an error while handling your request.</h4>
 {% endblock %}
