ready for release

--- a/templates/share/site_header.html
+++ b/templates/share/site_header.html
@@ -44,10 +44,10 @@
                         </a>
                     </div>
                 {% else %}
-{#                    <div id="user-login" class="navbar-form inline-block">#}
-{#                        <!-- same thing as /accounts/login-->#}
-{#                        <a class="login-link" href="{% url 'account_login' %}" title="Sign In"><i class="fa fa-sign-in"></i> Sign In</a>#}
-{#                    </div>#}
+                    <div id="user-login" class="navbar-form inline-block">
+                        <!-- same thing as /accounts/login-->
+                        <a class="login-link" href="{% url 'account_login' %}" title="Sign In"><i class="fa fa-sign-in"></i> Sign In</a>
+                    </div>
                 {% endif %}
             </div>
             </div>
