enabled types on clinical data to be attributes of variable pills, now just need to save them to the already altered variable models

--- a/templates/variables/variable_edit.html
+++ b/templates/variables/variable_edit.html
@@ -101,7 +101,7 @@
                                         <li class="list-group-item checkbox">
                                             <div id="heading-{{ attr.name }}" class="list-group-item__heading">
                                                 <label>
-                                                    <input class="variable-toggle-checkbox" type="checkbox" value="{{ attr.code }}" name="elements-selected" data-text-label="{{ attr.name|get_readable_name }}">
+                                                    <input class="variable-toggle-checkbox" type="checkbox" value="{{ attr.code }}" var_type="{{ attr.type }}" name="elements-selected" data-text-label="{{ attr.name|get_readable_name }}">
                                                     {{ attr.name|get_readable_name }}
                                                 </label>
                                             </div>
