--- a/templates/variables/variable_edit.html
+++ b/templates/variables/variable_edit.html
@@ -281,6 +281,10 @@
         </section>
     </div>
 
+    <!-- Hidden form for creating a workbook from the variable list -->
+    <form id="create-workbook" method="POST" action="" style="display:none;">
+        {% csrf_token %}
+    </form>
     <script type="text/javascript">
     var attr_list       = {{ variable_names | safe }};
     var attr_counts     = {{ variable_list_count | safe }};
