Fixing #1153 for workbooks, #1135

--- a/templates/workbooks/workbook_modals.html
+++ b/templates/workbooks/workbook_modals.html
@@ -158,6 +158,7 @@
                                 <tr>
                                     <th>Name</th>
                                     <th>Email</th>
+                                    <th></th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -170,6 +171,9 @@
                                     </td>
                                     <td>
                                         {{shared.email}}
+                                    </td>
+                                    <td>
+                                        <a class="remove-shared-user" role="button" data-shared-id="{{ shared.id }}"><i class="fa fa-times"></i></a>
                                     </td>
                                 </tr>
                             {% endfor %}
