--- a/templates/workbooks/workbook.html
+++ b/templates/workbooks/workbook.html
@@ -36,7 +36,7 @@
         {% else %}
         {# Is a shared workbook #}
         <li role="menuitem"><button class="btn btn-info" data-toggle="modal" data-target="#remove-workbook-modal-{{ workbook.id }}">Remove</button></li>
-        <li role="menuitem"><button class="btn btn-link" data-toggle="modal" data-target="#share-workbook-modal-{{ workbook.id }}">Shared with ({{ workbook.shared.count }})</button></li>
+        <li role="menuitem"><button class="btn btn-link" data-toggle="modal" data-target="#share-workbook-modal-{{ workbook.id }}">Shared with (<span class="share-count">{{ workbook.shared.count }}</span>)</button></li>
         {% endif %}
 
     </ul>
